# bayer-convert

./: .gitignore  CMakeLists.txt  README.md  main.cpp  subprocess.h
include/: bayer_converter.h  bayer_converter_thread.h  file.h  types.h
include/ui/: mainwindow.h
src/: bayer_converter.cpp  bayer_converter_thread.cpp  main.cpp  mainwindow.cpp
ui/: mainwindow.ui
